--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>self-salvation-jdk8</module>
         <module>self-salvation-spring</module>
+        <module>self-salvation-multithread</module>
     </modules>
 
 
