--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>self-salvation-multithread</module>
         <module>self-salvation-design-pattern</module>
         <module>self-salvation-leetcode</module>
+        <module>self-salvation-zookeeper</module>
     </modules>
 
 
